test_scores/negative_dimers/features/P62753.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P62753.pkl.xz